--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -25,6 +25,7 @@
   padding: 20px;
   color: white;
   height: auto;
+  margin-bottom: 5rem;
 }
 
 .card-background {
@@ -34,8 +35,8 @@
   width: 100%;
   height: 70vh;
   object-fit: cover;
-  background-image: url('../../assets/github.png');
-  background-size: auto;
+  background-image: url('../../assets/food.jpg');
+  background-size: 80rem;
   background-position: center;
   margin-right: 0rem;
   opacity: 0.4;
@@ -64,14 +65,14 @@
   border: none;
   margin: 0.5rem;
   border-radius: 1.5rem;
-  border-color: aliceblue;
+  border-color: rgb(255, 255, 255);
   transition: all 0.3s ease;
   color: white;
   box-shadow: 0 0 10px rgb(255, 255, 255);
 }
 
 .search-bar.active {
-  border-color: aliceblue;
+  border-color: rgb(232, 234, 235);
 }
 
 .order-button {
@@ -91,7 +92,7 @@
 }
 
 /* Media Queries for Mobile Devices */
- @media (max-width: 600px) {
+@media (max-width: 600px) {
   .home-title {
     font-size: 2rem;
   }
@@ -100,10 +101,12 @@
     width: 85vw;
     padding: 15px;
     height: auto;
+    margin-right: 1rem;
   }
 
   .card-background {
-    height: 20rem;
+    object-fit: contain;
+    background-position: center;
   }
 
   .card-content {
@@ -116,18 +119,19 @@
     width: 100%;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-    margin-right: 3rem;
+    margin-left: -0.4rem;
   }
 
   .order-button {
     width: 100%;
-    padding: 0.5rem;
-    margin-top: 0.4rem;
-    margin-left: -1.5rem;
-  } */
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    margin-left: -0.4rem;
+    margin-top: 0.5rem;
+  }
 
   .card-actions {
     flex-direction: column;
     gap: 5px;
   }
- }
+}
