--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -1,4 +1,4 @@
-/* .cart {
+.cart {
     padding: 2rem;
   }
   
@@ -14,4 +14,4 @@
     border-bottom: 1px solid #ddd;
     padding: 0.5rem 0;
   }
-   */
+  
